# marble

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
game/: client  controls.ini
libs/: CMakeLists.txt
libs/iniparser/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  drawable.cpp  drawable.hpp  marble.hpp  maths.hpp  network.hpp  object.hpp  server.cpp
